--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#">Video</a>
                 </li>
                 <li>
-                    <a href="#">Consejos</a>
+                    <a href="#">Tutorias</a>
                 </li>
                 <li>
                     <a href="#">Conocemos</a>
