--- a/index.html
+++ b/index.html
@@ -74,6 +74,27 @@
                 </figure>
             </div>
         </section>
+        <section class="galeria_container">
+                <h4 class="gale_text">Galeria Bebés</h4>
+            <figure class="galeria_fotos">
+                <img src="./galeria/img1.jpg" alt="Manos de los padres rodeando al bebé haciendo un mundo."class="imagen">
+            </figure>
+            <figure class="galeria_fotos">
+                <img src="./galeria/img3.jpg" alt="Bebé agarrandose las manitos y mostrando una hermosa sonrisa"class="imagen">
+            </figure>
+            <figure class="galeria_fotos">
+                <img src="./galeria/img2.jpg" alt="Bebé en las manos del padre."class="imagen">
+            </figure>
+           
+            <figure class="galeria_fotos">
+                <img src="./galeria/img4.jpg" alt="Bebé pequeño sonriendo"class="imagen">
+            </figure> <figure class="galeria_fotos">
+                <img src="./galeria/img5.jpg" alt="Bebé y mamá "class="imagen">
+            </figure> <figure class="galeria_fotos">
+                <img src="./galeria/img6.jpg" alt="piecitos Bebé"class="imagen">
+            </figure>
+            
+        </section>
 
     </main>
     <footer>
