cambios en galeria.agregue div e hice cmbios

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                 </figure>
             </div>
         </section>
-        <section class="galeria_container">
+        <section class="galeria">
+            <div class="galeria-container"
                 <h4 class="gale_text">Galeria Bebés</h4>
             <figure class="galeria_fotos">
                 <img src="./galeria/img1.jpg" alt="Manos de los padres rodeando al bebé haciendo un mundo."class="imagen">
@@ -93,7 +94,7 @@
             </figure> <figure class="galeria_fotos">
                 <img src="./galeria/img6.jpg" alt="piecitos Bebé"class="imagen">
             </figure>
-            
+        </div>
         </section>
 
     </main>
