background de galeria arreglado

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             </div>
         </section>
         <section class="galeria">
-            <div class="galeria-container"
-                <h4 class="gale_text">Galeria Bebés</h4>
+            <div class="galeria-container">
+                <h3 class="gale_text">Galeria Bebés</h3>
             <figure class="galeria_fotos">
                 <img src="./galeria/img1.jpg" alt="Manos de los padres rodeando al bebé haciendo un mundo." class="imagen">
             </figure>
