cmbie fotos a las card

--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
             </div>
             <div class="tarjeta">
                 <figure class="card">
-                    <img src="./imgcard/familia.avif" alt="Padre, madre e hijo" class="card_img">
+                    <img src="./imgcard/lactancia1.jpg" alt="Mamá amamantando" class="card_img">
                  </figure>
                  <div class="card_text">
-                    <h3 class="card_titulo">Consejos para la familia</h3>
+                    <h3 class="card_titulo">Alimentación</h3>
                  </div>
                  <a href="" class="btn1">Leer más</a>
             </div>
             <div class="tarjeta">
                 <figure class="card">
-                    <img src="./imgcard/familia.avif" alt="Padre, madre e hijo" class="card_img">
+                    <img src="./imgcard/mascota1.jpg" alt="Bebé y mascota" class="card_img">
                  </figure>
                  <div class="card_text">
-                    <h3 class="card_titulo">Consejos para la familia</h3>
+                    <h3 class="card_titulo">Cuidados a tener en cuenta</h3>
                  </div>
                  <a href="" class="btn1">Leer más</a>
             </div>
