cambio en la sec7 card

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
             <div class="tarjeta">
                 <figure class="card">
-                    <img src="./imgcard/bebeyperro.avifgi" alt="Bebé y mascota" class="card_img">
+                    <img src="./imgcard/bebeyperro.avif" alt="Bebé y mascota" class="card_img">
                  </figure>
                  <div class="card_text">
                     <h3 class="card_titulo">Cuidados a tener en cuenta</h3>
