cambio de colores en  sec1

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="sec5">
             
             <img src="./fotos/bebejuguetes.jpg" alt="bebé con juguetes"class=bbjugu>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quas, ipsum, suscipit blanditiis aliquid perferendis minus exercitationem natus officiis veritatis quod possimus doloremque deserunt? Cum debitis saepe tempora similique maiores.</p>
+            <p class="te1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quas, ipsum, suscipit blanditiis aliquid perferendis minus exercitationem natus officiis veritatis quod possimus doloremque deserunt? Cum debitis saepe tempora similique maiores.</p>
         </section>
         <section class="sec6">
             <p class="te1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci perspiciatis velit, natus quasi temporibus minima nulla nemo? Maxime libero rerum tempora, fuga obcaecati, repellendus voluptates mollitia molestias cum quod dolor.</p>
@@ -111,7 +111,7 @@
                     <img src="./imgcard/lactancia1.jpg" alt="Mamá amamantando" class="card_img">
                  </figure>
                  <div class="card_text">
-                    <h3 class="card_titulo">Alimentación</h3>
+                    <h3 class="card_titulo">La importancia de la lactncia </h3>
                  </div>
                  <a href="" class="btn1">Leer más</a>
             </div>
@@ -122,7 +122,7 @@
                  <div class="card_text">
                     <h3 class="card_titulo">Cuidados a tener en cuenta</h3>
                  </div>
-                 <a href="" class="btn1">Leer más</a>
+                 <a href="#" class="btn1">Leer más</a>
             </div>
         </section>
 
