cambios media screem

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="sec5">
             
             <img src="./fotos/bebejuguetes.jpg" alt="bebé con juguetes"class=bbjugu>
-            <p class="te1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quas, ipsum, suscipit blanditiis aliquid perferendis minus exercitationem natus officiis veritatis quod possimus doloremque deserunt? Cum debitis saepe tempora similique maiores.</p>
+            <p class="te2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quas, ipsum, suscipit blanditiis aliquid perferendis minus exercitationem natus officiis veritatis quod possimus doloremque deserunt.</p>
         </section>
         <section class="sec6">
             <p class="te1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci perspiciatis velit, natus quasi temporibus minima nulla nemo? Maxime libero rerum tempora, fuga obcaecati, repellendus voluptates mollitia molestias cum quod dolor.</p>
@@ -128,14 +128,22 @@
 
     </main>
     <footer>
-        <a href="">
-            <img src="./iconos/face.png" alt="Logo facebook" class="face">
-        </a>
-        <a href="">
-            <img src="./iconos/insta.png" alt="Logo instagram" class="insta">
-        </a>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53356.992485345734!2d-66.34468516871466!3d-33.29758024821823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95d43954196ca6cd%3A0x7fc2e3b4d49ecc83!2sSan%20Luis!5e0!3m2!1ses-419!2sar!4v1670962619483!5m2!1ses-419!2sar" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
-        &copy Todos los derechos reservados
+        <div class="redes">
+            <a href="#">
+                <img src="./iconos/instagram.png" alt="Logo instagram" class="insta">
+            </a>
+            <a href="#">
+                <img src="./iconos/facebook.png" alt="Logo facebook" class="face">
+            </a>
+            <a href="#">
+                <img src="./iconos/gorjeo.png" alt="Logo twiter" class="twiter">
+            </a>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53356.992485345734!2d-66.34468516871466!3d-33.29758024821823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95d43954196ca6cd%3A0x7fc2e3b4d49ecc83!2sSan%20Luis!5e0!3m2!1ses-419!2sar!4v1670962619483!5m2!1ses-419!2sar" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
+        <P class="fin">&copy Todos los derechos reservados</P>
     </footer>
+
+
+</head>
 </body>
 </html>
