guardo cmbios sec2

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
         <section class="sec1">
             <div class="izquierda">
-                <h2><span class="letra1">Hi</span>jo</h2>
+                <h2><span class="letra1">Hi</span""""">jo</h2>
                     <h3>Un préstamo de Dios</h3>
                         <p class="text">“Hijo es un ser que Dios nos prestó para hacer un curso intensivo de cómo amar a alguien, más que a nosotros mismos. de cómo cambiar nuestros peores defectos para darles los mejores ejemplos y, de nosotros, aprender a tener coraje. Sí ¡Eso es! Ser madre o padre es el mayor acto de coraje que alguien pueda tener, porque es exponerse a todo tipo de dolor, principalmente de la incertidumbre de estar actuando correctamente y del miedo a perder algo tan amado.</p>
                      <div class="link">
